# Xray-Control-Panel

./: V0.4.code-workspace  platformio.ini
src/: CMakeLists.txt  RELEASE_NOTES.md  TREY.c  TREY.h  battery_logo.h  battrery_logo.c  filelist.txt  lv_conf.h  main.cpp  main_After15sec_ready_for_expose.cpp  main_duty_cycle.cpp  pins_info.h  ui.c  ui.h  ui_Screen1.c  ui_events.h  ui_img_battery_0_png.c  ui_img_battery_25_png.c  ui_img_battery_50_png.c  ui_img_battery_75_png.c  ui_img_battery_full_png.c  ui_img_exposure_png.c  ui_img_radiation_warning_png.c  ui_img_thermometer_png.c
